<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/bkg_page"
    tools:context="GastosFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_valor_gasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expenses_value_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_valor_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_descricao_gasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expenses_description_hint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_valor_gasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_descricao_gasto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_salvar_gasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_expenses"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/bkg_button"
        android:textColor="@color/text_button"
        app:layout_constraintTop_toBottomOf="@id/til_descricao_gasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_historico_gastos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/expenses_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toBottomOf="@id/btn_salvar_gasto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_gastos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_historico_gastos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_transacao" />

</androidx.constraintlayout.widget.ConstraintLayout>